Skip DLM initialization when deduplication is disabled (#10)
* Skip DLM initialization when dedupe is disabled

* Add explicit config and payload validation

* Sonar cleanup